# swc-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.json
scripts/: anova_posthoc_summary.py  flag_unknow_type.py  morphology_viz.py  node_type_report.py
src/archive/: clean_orphans.py  clean_radius.py  debug.py  dendrogram.py
src/swctools/: _init_.py  config.py  dendrograms.py  graph.py  io.py  metrics.py  orphans.py  radius_qc.py  statistic_analysis.py  stats.py  violin_plots.py
tests/: test.py  type_check.py
